<resources>
    <string name="app_name">ÅFs körjournal</string>
    <string name="app_name_short">Körjournal</string>

    <string name="action_settings">Inställningar</string>
    <string name="action_map">Karta</string>

    <string name="title_new_trip">Ny resa</string>
    <string name="title_previous_trips">Logg</string>
    <string name="title_activity_trip_details">Resa</string>
    <string name="title_activity_vehicles">Fordon</string>
    <string name="empty_address">Tomt</string>
    <string name="to_label">Till:</string>
    <string name="from_label">Från:</string>
    <string name="km">KM</string>
    <string name="notification_trip_name">Notifiering vid resa</string>
    <string name="notification_trip_desc">En sticky notifiering visas under tiden som kör</string>

    <string name="notification_title">En resa har pågår</string>
    <string name="notification_desc">Klicka för att stoppa</string>
    <string name="btn_stop">Stoppa resa</string>
    <string name="btn_start">Starta resa</string>
    <string name="btn_save">Spara resa</string>

    <string name="dialog_permissions_title">Rättigheter</string>
    <string name="dialog_permissions_desc">Den här appen behöver tillgång till din plats.</string>
    <string name="dialog_permissions_btn">Tillåt</string>

    <string name="dialog_location_title">Platsuppgifter</string>
    <string name="dialog_location_desc">Din platsdelning är satt till \'AV\'. \nVar god slå på detta.</string>
    <string name="dialog_location_btn">Platsinställningar</string>
    <string name="departure">Startplats</string>
    <string name="destination">Resmål</string>
    <string name="notes">Anteckning</string>
    <string name="reg_nr">Reg. nr</string>
    <string name="name">Namn</string>
    <string name="vehicle_type">Fordonstyp</string>
    <string name="private_vehicle">Privat fordon</string>
    <string name="validation_empty">Fältet får inte vara tomt</string>
    <string name="title_new_vehicle">Nytt fordon</string>
    <string name="handle_vehicles">Hantera...</string>
</resources>
