<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/reg_nr"/>

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regnrEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nextFocusDown="@id/nameEditText"
                android:imeOptions="actionNext"
                android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/name"/>

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:nextFocusDown="@id/privateSwitch"
                android:imeOptions="actionNext"/>

    </LinearLayout>
    <Switch
            android:id="@+id/privateSwitch"
            android:text="@string/private_vehicle"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:nextFocusDown="@id/vehicleTypeSpinner"
            android:checked="false"
            android:layout_marginTop="16dp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

        <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/vehicle_type"/>

        <Spinner
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:nextFocusDown="@id/notesEditText"
                android:id="@+id/vehicleTypeSpinner"/>

    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/notes"/>

    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/notesEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:imeOptions="actionDone"/>


</LinearLayout>